Fixed the header and styles for it. Mainly worked with the vertical align.

--- a/media/css/styles.css
+++ b/media/css/styles.css
@@ -31,7 +31,7 @@ div#topContInner div {
   display: inline;
 }
 div#topCont img {
-  margin-top: -6px;
+  margin-top: -4px;
 }
 span#userContProfile {
   opacity: 0.6;
@@ -199,7 +199,7 @@ a:visited:hover {
   color: #999;
 }
 div#topCont a {
-  font-weight: bold;
+  /*font-weight: normal;*/
   color: #FFF;
 }
 div#topCont h1 a:hover {
@@ -555,7 +555,7 @@ img#betaLogo {
   filter:alpha(opacity=7);
 }
 span#userContDropdown {
-  vertical-align: middle;
+  vertical-align: 0%;
   padding-left: 18px;
   margin-right: 3px;
   background-image: url('/media/img/icons/arrow-down.png');
@@ -598,19 +598,20 @@ img.icon {
 #userCont {
   position: relative;
   cursor: pointer;
+  vertical-align: -5%;
   padding: 10px 0 10px 0;
 }
 #userCont ul.subnav {
   list-style: none;
   position: absolute;
-  top: 36px;
+  top: 34px;
   right: -7px;
   background: #333;
   margin: 0; 
   padding: 0;
   display: none;
   float: left;
-  width: 162px;
+  width: 157px;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   border: 1px solid #111;
